# microjit

./: .gitmodules  CMakeLists.txt  README.md
experiments/: main.cpp
src/microjit/: command_queue.h  compilation_agent.cpp  compilation_agent.h  decaying_weighted_cache.h  def.h  generate_primitive_conversion_map.py  generate_x86_64_primitive_converter.py  helper.h  instructions.cpp  instructions.h  jit.cpp  jit.h  jit_x86_64.cpp  jit_x86_64.h  lock.h  managed_thread.cpp  managed_thread.h  microjit.h  orchestrator.h  primitive_conversion_map.gen.h  primitive_converter.gen.h  priority_queue.h  runtime_agent.cpp  runtime_agent.h  safe_refcount.h  thread_pool.h  trampoline.h  type.h  utils.h  virtual_stack.h  x86_64_primitive_converter.gen.h
